--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -7,8 +7,8 @@
                         <h2 class="mt-0">
                             Taryfa dzienna
                         </h2>
-                        <p class="mb-2">
-                            W godzinach 6.00-22.00 za podstawienie auta do 4 osób minimalna wynosi: 
+                        <p class="h4 mb-2">
+                            6.00 - 22.00 za podstawienie auta do 4 osób: 
                         </p>
                         <p>
                             30 zł w tym 5km + za każdy następny kilometr 4 zł bez stref
@@ -33,8 +33,8 @@
                         <h2 class="mt-0 color-light-1">
                             Taryfa nocna
                         </h2>
-                        <p class="mb-2 color-light-3">
-                            W godzinach 22.00 – 6.00 za podstawienie auta do 4 osób minimalna cena wynosi: 
+                        <p class="h4 mb-2 color-light-1">
+                            22.00 – 6.00 za podstawienie auta do 4 osób: 
                         </p>
                         <p class="color-light-3">
                             35 zł w tym 5km + za każdy następny kilometr 5 zł bez stref
@@ -52,6 +52,144 @@
                   </svg>
                 </div>
               </a>
+                    </div>
+                </div>
+
+                <div class="row g-4">
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Fotelik dziecięcy
+                                </h3>
+                                <p class="mt-0">
+                                    Dodatkowo płatny 10 zł za szt.
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Zwierzęta
+                                </h3>
+                                <p class="mt-0">
+                                     Dodatkowo płatne 10 zł 
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Odpalenie auta
+                                </h3>
+                                <p class="mt-0">
+                                    Dodatkowo płatne 30 zł
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Czas oczekiwania postoju
+                                </h3>
+                                <p class="mt-0">
+                                     Liczony od momentu rozpoczęcia kursu 0,85 gr za min/godzina 57 zł
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Zakupy do domu 
+                                </h3>
+                                <p class="mt-0">
+                                   Wedle regularnego cennika + 20 zł za usługę
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    Kombi auto do 4 pasażerów 
+                                </h3>
+                                <p class="mt-0">
+                                    + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    VAN auto do 6 pasażerów
+                                </h3>
+                                <p class="mt-0">
+                                     Za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika 
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    BUS auto do 8 pasażerów
+                                </h3>
+                                <p class="mt-0">
+                                    Za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika 
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-4">
+                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                            <div>
+                                <h3 class="mb-2">
+                                    VIP auto
+                                </h3>
+                                <p class="mt-0">
+                                    Za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika  
+                                </p>
+                            </div>
+                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                            </svg>
+                        </div>
                     </div>
                 </div>
 
@@ -124,5 +262,14 @@
         justify-content: space-between;
         list-style: none;
         font-size: 120%;
+    }
+    .service-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        min-height: 200px
+    }
+    .service-card svg {
+        transform: rotate(45deg);
     }
 </style>
