--- a/src/includes/sections/services.njk
+++ b/src/includes/sections/services.njk
@@ -1,61 +1,111 @@
-<section class="bg-dark-3" id="uslugi">
-<div class="container-md">
-    <div class="px-3 pt-3 p-md-4 pb-medium pb-md-4 rounded-xl p-relative bg-light-1">
+<section class="pt-small pb-medium bg-light-1" id="uslugi">
+    <div class="container-md">
         <div class="col-md-6 mx-auto pt-small pt-md-xsmall text-center mb-5">
             <h2 class="h1 mt-0 split-lines">
-                W czym mogę pomóc
+                Dodatkowe usługi
             </h2>
-            <p class="split-lines">
-            W jakich dziedzinach jestem w stanie pomóc Ci osiągnąć pożądane rezultaty
-            </p>
         </div>
         <div class="row g-4">
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card rounded-lg shadow-3 p-1 bg-light-1 fade-in">
-                        <div class="p-2 pb-0 rounded-lg bg-light-2">
-                        <img src="/assets/img/services/se-develop.webp" loading="lazy" decoding="async" width="382" height="204" class="rounded-sm" alt="Strony internetowe">
-                        </div>
-                        <div class="px-4 py-3">
-                        <h3 class="h3 my-0">
-                           Tworzenie stron www
-                        </h3>
-                        <p class="my-1">
-                           Zyskaj przewagę konkurencyjną w sieci
-                        </p>
-                        </div>
-                    </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Fotelik dodatkowo płatny 10 zł za szt.
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
                 </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card rounded-lg shadow-3 p-1 bg-light-1 fade-in">
-                        <div class="p-2 pb-0 rounded-lg bg-light-2">
-                        <img src="/assets/img/services/se-position.webp" loading="lazy" decoding="async" width="382" height="204" class="rounded-sm" alt="Pozycjonowanie w Google">
-                        </div>
-                        <div class="px-4 py-3">
-                        <h3 class="h3 my-0">
-                           Pozycjonowanie w Google 
-                        </h3>
-                        <p class="my-1">
-                           Zwiększaj widoczność w wyszukiwarce
-                        </p>
-                        </div>
-                    </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Zwierzęta dodatkowo płatne 10 zł 
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
                 </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card rounded-lg shadow-3 p-1 bg-light-1 fade-in">
-                        <div class="p-2 pb-0 rounded-lg bg-light-2">
-                        <img src="/assets/img/services/se-design.webp" loading="lazy" decoding="async" width="382" height="204" class="rounded-sm" alt="Projektowanie graficzne">
-                        </div>
-                        <div class="px-4 py-3">
-                        <h3 class="h3 my-0">
-                           Projektowanie graficzne
-                        </h3>
-                        <p class="my-1">
-                           Pokaż się z najlepszej strony www
-                        </p>
-                        </div>
-                    </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Odpalenie auta dodatkowo płatne 30 zł
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
                 </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Czas oczekiwania postoju liczony od momentu rozpoczęcia kursu 0,85 gr za min/godzina 57 zł
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Zakupy do domu wedle regularnego cennika + 20 zł za usługę
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        Kombi auto do 4 pasażerów + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        VAN auto do 6 pasażerów dodatkowo płatny za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika 
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        BUS auto do 8 pasażerów dodatkowo płatny za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika 
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+                <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
+                    <p>
+                        VIP auto dodatkowo płatny za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika  
+                    </p>
+                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                    </svg>
+                </div>
+            </div>
         </div>
+
     </div>
-</div>
 </section>
+
+<style>
+    .service-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        min-height: 200px
+    }
+</style>
