--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5010,6 +5010,8 @@ html.lenis, html.lenis body {
 .button-app img {
   height: 58px;
   width: auto;
+  background: #fff;
+  border-radius: 10px;
 }
 
 @keyframes pencilWrite {
